--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personal-site",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,36 +9,39 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@formkit/auto-animate": "1.0.0-beta.5",
-    "@next/font": "13.1.1",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
-    "class-variance-authority": "^0.4.0",
-    "eslint": "8.31.0",
-    "eslint-config-next": "13.1.1",
-    "next": "13.1.1",
-    "nprogress": "^0.2.0",
+    "@formkit/auto-animate": "1.0.0-beta.6",
+    "@next/font": "13.4.4",
+    "@types/node": "20.2.5",
+    "@types/react": "18.2.7",
+    "@types/react-dom": "18.2.4",
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1",
+    "eslint": "8.41.0",
+    "eslint-config-next": "13.4.4",
+    "lucide-react": "^0.230.0",
+    "next": "13.4.4",
+    "nprogress": "1.0.0-1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.7.1",
-    "react-wrap-balancer": "^0.2.4",
-    "typescript": "4.9.4"
+    "react-icons": "^4.9.0",
+    "react-wrap-balancer": "^0.5.0",
+    "tailwind-merge": "^1.12.0",
+    "typescript": "5.0.4"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
-    "@types/nprogress": "^0.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.47.1",
-    "@typescript-eslint/parser": "^5.47.1",
-    "autoprefixer": "^10.4.13",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^3.5.2",
-    "eslint-plugin-import": "^2.26.0",
+    "@types/nprogress": "100.0.26-alpha",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
+    "autoprefixer": "^10.4.14",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "postcss": "^8.4.20",
-    "prettier": "^2.8.1",
-    "prettier-plugin-tailwindcss": "^0.2.1",
-    "tailwindcss": "^3.2.4",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
+    "tailwindcss": "^3.3.2",
     "tailwindcss-animate": "^1.0.5"
   }
 }
