--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "1.0.0-beta.6",
+    "@million/lint": "^0.0.73",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -46,6 +47,7 @@
     "eslint": "8.41.0",
     "eslint-config-next": "14.2.3",
     "lucide-react": "^0.230.0",
+    "million": "^3.0.6",
     "next": "14.2.3",
     "next-themes": "^0.2.1",
     "nprogress": "1.0.0-1",
