--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint --fix"
@@ -11,7 +11,7 @@
   "dependencies": {
     "@formkit/auto-animate": "1.0.0-beta.6",
     "@million/lint": "^0.0.73",
-    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.3",
@@ -35,23 +35,25 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.4",
-    "@radix-ui/react-toggle": "^1.0.3",
+    "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.0.6",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "20.2.5",
-    "@types/react": "18.2.7",
-    "@types/react-dom": "18.2.4",
-    "class-variance-authority": "^0.6.0",
-    "clsx": "^1.2.1",
-    "cmdk": "^0.2.0",
-    "date-fns": "^2.30.0",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "eslint": "8.41.0",
-    "eslint-config-next": "14.2.3",
-    "lucide-react": "^0.230.0",
-    "million": "^3.0.6",
-    "next": "14.2.3",
-    "next-themes": "^0.2.1",
-    "nprogress": "1.0.0-1",
-    "react": "18.3.1",
+    "eslint-config-next": "15.4.1",
+    "install": "^0.13.0",
+    "lucide-react": "^0.525.0",
+    "million": "^3.1.11",
+    "next": "15.4.1",
+    "next-themes": "^0.4.6",
+    "nprogress": "0.2.0",
+    "react": "19.1.0",
     "react-day-picker": "^8.7.1",
     "react-dom": "18.3.1",
     "react-icons": "^4.9.0",
@@ -60,19 +62,20 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/forms": "^0.5.10",
     "@types/nprogress": "100.0.26-alpha",
-    "@typescript-eslint/eslint-plugin": "^5.59.8",
-    "@typescript-eslint/parser": "^5.59.8",
-    "autoprefixer": "^10.4.14",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier": "^4.2.1",
-    "postcss": "^8.4.20",
-    "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.3.0",
-    "tailwindcss": "^3.3.2",
-    "tailwindcss-animate": "^1.0.5"
+    "@typescript-eslint/eslint-plugin": "^8.37.0",
+    "@typescript-eslint/parser": "^8.37.0",
+    "autoprefixer": "^10.4.21",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.1",
+    "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "tailwindcss": "^4.1.11",
+    "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.3.5"
   }
 }
