--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
-    "eslint": "8.41.0",
     "eslint-config-next": "15.4.1",
     "install": "^0.13.0",
     "lucide-react": "^0.525.0",
@@ -58,8 +57,7 @@
     "react-dom": "18.3.1",
     "react-icons": "^4.9.0",
     "react-wrap-balancer": "^1.0.0",
-    "tailwind-merge": "^1.12.0",
-    "typescript": "5.0.4"
+    "tailwind-merge": "^1.12.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
@@ -67,6 +65,7 @@
     "@typescript-eslint/eslint-plugin": "^8.37.0",
     "@typescript-eslint/parser": "^8.37.0",
     "autoprefixer": "^10.4.21",
+    "eslint": "8.57.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.32.0",
@@ -76,6 +75,7 @@
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4.1.11",
     "tailwindcss-animate": "^1.0.7",
-    "tw-animate-css": "^1.3.5"
+    "tw-animate-css": "^1.3.5",
+    "typescript": "5.0.4"
   }
 }
