--- a/package.json
+++ b/package.json
@@ -32,16 +32,32 @@
 		"@fontsource/poppins": "^5.2.7",
 		"@hookform/resolvers": "^5.2.2",
 		"@marsidev/react-turnstile": "^1.3.1",
+		"@orpc/client": "^1.7.5",
+		"@orpc/json-schema": "^1.7.5",
+		"@orpc/openapi": "^1.7.5",
+		"@orpc/server": "^1.7.5",
+		"@orpc/tanstack-query": "^1.7.5",
+		"@orpc/zod": "^1.7.5",
 		"@radix-ui/react-accordion": "^1.2.12",
 		"@radix-ui/react-alert-dialog": "^1.1.15",
+		"@radix-ui/react-aspect-ratio": "^1.1.8",
 		"@radix-ui/react-avatar": "^1.1.10",
+		"@radix-ui/react-checkbox": "^1.3.3",
 		"@radix-ui/react-collapsible": "^1.1.12",
+		"@radix-ui/react-context-menu": "^2.2.16",
 		"@radix-ui/react-dialog": "^1.1.15",
 		"@radix-ui/react-dropdown-menu": "^2.1.16",
+		"@radix-ui/react-hover-card": "^1.1.15",
+		"@radix-ui/react-label": "^2.1.8",
+		"@radix-ui/react-menubar": "^1.1.16",
+		"@radix-ui/react-navigation-menu": "^1.2.14",
 		"@radix-ui/react-popover": "^1.1.15",
+		"@radix-ui/react-progress": "^1.1.8",
+		"@radix-ui/react-radio-group": "^1.3.8",
 		"@radix-ui/react-scroll-area": "^1.2.10",
 		"@radix-ui/react-select": "^2.2.6",
 		"@radix-ui/react-separator": "^1.1.7",
+		"@radix-ui/react-slider": "^1.3.6",
 		"@radix-ui/react-slot": "^1.2.3",
 		"@radix-ui/react-switch": "^1.2.6",
 		"@radix-ui/react-tabs": "^1.1.13",
@@ -58,6 +74,7 @@
 		"@tanstack/devtools-vite": "^0.3.11",
 		"@tanstack/match-sorter-utils": "^8.19.4",
 		"@tanstack/react-devtools": "^0.7.0",
+		"@tanstack/react-form": "^1.0.0",
 		"@tanstack/react-pacer": "^0.16.4",
 		"@tanstack/react-query": "^5.66.5",
 		"@tanstack/react-query-devtools": "^5.84.2",
@@ -65,20 +82,25 @@
 		"@tanstack/react-router-devtools": "^1.132.0",
 		"@tanstack/react-router-ssr-query": "^1.139.14",
 		"@tanstack/react-start": "^1.139.14",
+		"@tanstack/react-store": "^0.7.0",
 		"@tanstack/react-table": "^8.21.2",
 		"@tanstack/router-plugin": "^1.132.0",
+		"@tanstack/store": "^0.7.0",
 		"@types/nprogress": "^0.2.3",
 		"@types/qs": "^6.14.0",
 		"axios": "^1.12.2",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"cmdk": "^1.1.1",
 		"date-fns": "^4.1.0",
+		"embla-carousel-react": "^8.6.0",
 		"eslint": "^9.37.0",
 		"eslint-plugin-import-x": "^4.16.1",
 		"eslint-plugin-jsx-a11y": "^6.10.2",
 		"fast-glob": "^3.3.3",
 		"hast-util-to-jsx-runtime": "^2.3.6",
 		"ignore": "^7.0.5",
+		"input-otp": "^1.4.2",
 		"lucide-react": "^0.544.0",
 		"motion": "^12.23.24",
 		"next-themes": "^0.4.6",
@@ -88,29 +110,22 @@
 		"prettier-plugin-tailwindcss": "^0.7.2",
 		"qs": "^6.14.0",
 		"react": "^19.2.0",
-		"react-day-picker": "^9.11.2",
+		"react-day-picker": "^9.12.0",
 		"react-dom": "^19.2.0",
 		"react-hook-form": "^7.66.0",
 		"react-markdown": "^10.1.0",
 		"react-paginate": "^8.3.0",
+		"react-resizable-panels": "^3.0.6",
 		"recharts": "2.15.4",
 		"semantic-release": "^25.0.1",
 		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.0.2",
 		"tailwindcss": "^4.0.6",
 		"tw-animate-css": "^1.3.6",
+		"vaul": "^1.1.2",
 		"vite-tsconfig-paths": "^5.1.4",
 		"zod": "^4.1.11",
-		"zustand": "^5.0.8",
-		"@orpc/client": "^1.7.5",
-		"@orpc/json-schema": "^1.7.5",
-		"@orpc/openapi": "^1.7.5",
-		"@orpc/server": "^1.7.5",
-		"@orpc/tanstack-query": "^1.7.5",
-		"@orpc/zod": "^1.7.5",
-		"@tanstack/react-form": "^1.0.0",
-		"@tanstack/react-store": "^0.7.0",
-		"@tanstack/store": "^0.7.0"
+		"zustand": "^5.0.8"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^20.1.0",
@@ -119,6 +134,8 @@
 		"@svgr/core": "^8.1.0",
 		"@svgr/plugin-jsx": "^8.1.0",
 		"@tailwindcss/typography": "^0.5.19",
+		"@tanstack/devtools-event-client": "^0.3.5",
+		"@tanstack/devtools-vite": "^0.3.11",
 		"@tanstack/eslint-config": "^0.3.0",
 		"@tanstack/eslint-plugin-router": "^1.132.31",
 		"@testing-library/dom": "^10.4.0",
@@ -145,9 +162,7 @@
 		"vite-plugin-icons-spritesheet": "^3.0.1",
 		"vite-plugin-svgr": "^4.5.0",
 		"vitest": "^3.0.5",
-		"web-vitals": "^5.1.0",
-		"@tanstack/devtools-event-client": "^0.3.5",
-		"@tanstack/devtools-vite": "^0.3.11"
+		"web-vitals": "^5.1.0"
 	},
 	"config": {
 		"commitizen": {
