--- a/package.json
+++ b/package.json
@@ -21,23 +21,14 @@
 		"cf-typegen": "wrangler types"
 	},
 	"dependencies": {
-		"@clerk/clerk-react": "^5.49.0",
-		"@clerk/themes": "^2.4.29",
 		"@cloudflare/vite-plugin": "^1.17.0",
 		"@date-fns/utc": "^2.1.1",
 		"@eslint/js": "^9.37.0",
-		"@faker-js/faker": "^10.0.0",
 		"@fontsource-variable/geist": "^5.2.8",
+		"@fontsource-variable/geist-mono": "^5.2.7",
 		"@fontsource-variable/inter": "^5.2.8",
 		"@fontsource/poppins": "^5.2.7",
 		"@hookform/resolvers": "^5.2.2",
-		"@marsidev/react-turnstile": "^1.3.1",
-		"@orpc/client": "^1.7.5",
-		"@orpc/json-schema": "^1.7.5",
-		"@orpc/openapi": "^1.7.5",
-		"@orpc/server": "^1.7.5",
-		"@orpc/tanstack-query": "^1.7.5",
-		"@orpc/zod": "^1.7.5",
 		"@radix-ui/react-accordion": "^1.2.12",
 		"@radix-ui/react-alert-dialog": "^1.1.15",
 		"@radix-ui/react-aspect-ratio": "^1.1.8",
@@ -67,28 +58,18 @@
 		"@semantic-release/changelog": "^6.0.3",
 		"@semantic-release/git": "^10.0.1",
 		"@semantic-release/github": "^12.0.0",
-		"@stripe/react-stripe-js": "^5.2.0",
-		"@stripe/stripe-js": "^8.1.0",
 		"@t3-oss/env-core": "^0.13.8",
 		"@tailwindcss/vite": "^4.0.6",
 		"@tanstack/devtools-vite": "^0.3.11",
 		"@tanstack/match-sorter-utils": "^8.19.4",
 		"@tanstack/react-devtools": "^0.7.0",
-		"@tanstack/react-form": "^1.0.0",
-		"@tanstack/react-pacer": "^0.16.4",
 		"@tanstack/react-query": "^5.66.5",
 		"@tanstack/react-query-devtools": "^5.84.2",
 		"@tanstack/react-router": "^1.132.0",
 		"@tanstack/react-router-devtools": "^1.132.0",
 		"@tanstack/react-router-ssr-query": "^1.139.14",
 		"@tanstack/react-start": "^1.139.14",
-		"@tanstack/react-store": "^0.7.0",
-		"@tanstack/react-table": "^8.21.2",
 		"@tanstack/router-plugin": "^1.132.0",
-		"@tanstack/store": "^0.7.0",
-		"@types/nprogress": "^0.2.3",
-		"@types/qs": "^6.14.0",
-		"axios": "^1.12.2",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.1.1",
@@ -98,23 +79,19 @@
 		"eslint-plugin-import-x": "^4.16.1",
 		"eslint-plugin-jsx-a11y": "^6.10.2",
 		"fast-glob": "^3.3.3",
-		"hast-util-to-jsx-runtime": "^2.3.6",
 		"ignore": "^7.0.5",
 		"input-otp": "^1.4.2",
 		"lucide-react": "^0.544.0",
 		"motion": "^12.23.24",
+		"next-theme": "^0.1.5",
 		"next-themes": "^0.4.6",
 		"nitro": "3.0.1-alpha.1",
-		"nprogress": "^0.2.0",
 		"orval": "^7.13.2",
 		"prettier-plugin-tailwindcss": "^0.7.2",
-		"qs": "^6.14.0",
 		"react": "^19.2.0",
 		"react-day-picker": "^9.12.0",
 		"react-dom": "^19.2.0",
 		"react-hook-form": "^7.66.0",
-		"react-markdown": "^10.1.0",
-		"react-paginate": "^8.3.0",
 		"react-resizable-panels": "^3.0.6",
 		"recharts": "2.15.4",
 		"semantic-release": "^25.0.1",
@@ -124,8 +101,7 @@
 		"tw-animate-css": "^1.3.6",
 		"vaul": "^1.1.2",
 		"vite-tsconfig-paths": "^5.1.4",
-		"zod": "^4.1.11",
-		"zustand": "^5.0.8"
+		"zod": "^4.1.11"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^20.1.0",
