feat: added wrangler

--- a/package.json
+++ b/package.json
@@ -138,7 +138,8 @@
 		"vite-plugin-icons-spritesheet": "^3.0.1",
 		"vite-plugin-svgr": "^4.5.0",
 		"vitest": "^3.0.5",
-		"web-vitals": "^5.1.0"
+		"web-vitals": "^5.1.0",
+		"wrangler": "^4.54.0"
 	},
 	"config": {
 		"commitizen": {
