--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -2,6 +2,22 @@
 	"$schema": "node_modules/wrangler/config-schema.json",
 	"name": "personal-site",
 	"compatibility_date": "2025-09-02",
-	"compatibility_flags": ["nodejs_compat"],
+	"compatibility_flags": [
+		"nodejs_compat"
+	],
 	"main": "@tanstack/react-start/server-entry",
+	"routes": [
+		{
+			"pattern": "rifat.dev",
+			"custom_domain": true
+		},
+		{
+			"pattern": "rifathossain.com",
+			"custom_domain": true
+		},
+		{
+			"pattern": "rifathossain.dev",
+			"custom_domain": true
+		}
+	]
 }
